--- a/caliopen/static/css/mixins.less
+++ b/caliopen/static/css/mixins.less
@@ -3,3 +3,19 @@
      -moz-border-radius: @radius;
           border-radius: @radius;
 }
+
+.inline-block() {
+  display: -moz-inline-stack;
+  display: inline-block;
+  vertical-align: top;
+  zoom: 1;
+  *display: inline;
+}
+
+.logo {
+  text-indent: 110%;
+  white-space: nowrap;
+  overflow: hidden;
+  display: block;
+}
+
