--- a/caliopen/static/css/styles.less
+++ b/caliopen/static/css/styles.less
@@ -1,8 +1,9 @@
 @import "mixins.less";
-@import "fonts.less";
+// @import "fonts.less";    #TOFIX
 
 @import "globals.less";
 @import "common.less";
+
 
 @import "home.less";
 @import "contact.less";
