--- a/caliopen/static/css/globals.less
+++ b/caliopen/static/css/globals.less
@@ -1,26 +1,26 @@
 body {
-  font-family: "OpenSans";
+  // font-family: 'Open Sans', sans-serif !important;
   font-weight: 300;
   margin: 0;
   padding: 0;
 }
 
 h1, h2, h3, h4, h5, h6 {
-  font-family: OpenSans, Arial, Helvetica, Verdana, sans-serif;
-  font-weight: 300;
+  // font-family: OpenSans, Arial, Helvetica, Verdana, sans-serif;
+  // font-weight: 300;
   &:first-child {
     margin: 0;
   }
 }
 
-ol, ul {
-  padding: 0;
-  list-style: none;
-}
+// ol, ul {
+//   padding: 0;
+//   list-style: none;
+// }
 
-p {
-  font-weight: 300;
-}
+// p {
+//   font-weight: 300;
+// }
 
 .columns {
   letter-spacing: -0.25em;
