Update the contact page with grid.

--- a/caliopen/static/css/common.less
+++ b/caliopen/static/css/common.less
@@ -2,6 +2,14 @@
 
 @font-family-base: 'Open Sans', sans-serif;
 
+body {
+  font-weight: 300;
+}
+
+h2, h3 {
+  font-weight: 800;
+}
+
 .layout {
   .center-block();
   .container-fluid();
@@ -174,9 +182,9 @@ footer {
   }
 }
 
-main {
-  text-align: center;
-  background-color: #e4e4e4;
-}
+// main {
+//   text-align: center;
+//   background-color: #e4e4e4;
+// }
 
 
