--- a/caliopen/static/css/contact.less
+++ b/caliopen/static/css/contact.less
@@ -1,44 +1,48 @@
-#contact {
-  h2 {
-    margin: 35px 0px 23px;
-    font-size: 1.8rem;
-    font-weight: bold;
-    line-height: 2.8rem;
+main {
+  &#contact-text {
+    background: #CCCCCC;
   }
-  .column {
-    &.column-3 {
-      width: 312px;
-      padding: 38px 44px 0;
-      text-align: center;
-      &:nth-child(odd) {
-        background:#eee;
-      }
+
+  &#contact-icons {
+    background: #E4E4E4;
+  }
+}
+
+#contact-text {
+  background: #CCCCCC;
+
+  div.content {
+    h2 {
+      margin-bottom: 20px;
     }
+
+    p {
+      margin: 15px 0;
+    }
+
+    margin: 50px 0;
+    .make-md-column(9);
+    .make-md-column-offset(1);
+    text-align: justify;
+    .big-text();
   }
+}
+
+#contact-icons {
   article {
+    .make-md-column(4);
     min-height: 200px;
-    background-color: #e4e4e4;
-    &:first-child {
-      min-height: 380px;
-      background-color: #ccc;
-      .content {
-        width: 970px;
-        padding: 20px 115px;
-        margin: 0 auto;
-        text-align: left;
-      }
-      p {
-        line-height: 2.4rem;
-        margin-bottom: 38px;
-      }
+
+    h3 {
+      text-align: center;
+      font-weight: 800;
+      margin-bottom: 25px;
     }
-    &.column-3 {
-      color: #333;
-      h3 {
-        margin-bottom: 30px;
-        font-weight: bold;
-      }
+
+    &#github, &#blog {
+      background: #E4E4E4;
     }
+
     &#github {
       a {
         background-image: url('/static/images/contact_github.png');
@@ -50,17 +54,7 @@
         }
       }
     }
-    &#email {
-      a {
-        background-image: url('/static/images/contact_email.png');
-        width: 92px;
-        height: 88px;
-        margin: 0 auto;
-        &:hover {
-          background-image: url('/static/images/contact_email_hover.png');
-        }
-      }
-    }
+
     &#blog {
       a {
         background-image: url('/static/images/contact_blog.png');
@@ -69,6 +63,20 @@
         margin: 0 auto;
         &:hover {
           background-image: url('/static/images/contact_blog_hover.png');
+        }
+      }
+    }
+
+    &#email {
+      background: #EEEEEE;
+
+      a {
+        background-image: url('/static/images/contact_email.png');
+        width: 92px;
+        height: 88px;
+        margin: 0 auto;
+        &:hover {
+          background-image: url('/static/images/contact_email_hover.png');
         }
       }
     }
