Fix links colors.

--- a/caliopen/static/css/common.less
+++ b/caliopen/static/css/common.less
@@ -88,6 +88,9 @@ header {
           .inline-block();
           a {
             &:hover, &:active {
+              background-color: #666;
+            }
+            &.active {
               background-color: #2BAFDB;
             }
           }
