--- a/caliopen/static/css/features.less
+++ b/caliopen/static/css/features.less
@@ -14,19 +14,24 @@ main {
 
 #features-slider {
   .slider {
-    .make-md-column(4);
-    .make-md-column-offset(1);
-  }
+    .make-md-column(7);
+    .make-md-column-offset(2);
 
-  .slider2 {
-    .make-md-column(2);
+    div#slides {
+      margin: 50px 0 20px 0;
+    }
+
+    img {
+      margin: 0 auto;
+      max-width: 650px;
+    }
   }
 }
 
 #features-icons {
   ul {
     padding: 0;
-    margin: 20px 0;
+    margin: 50px 0;
 
     h3 {
       margin-top: 0;
@@ -84,8 +89,25 @@ main {
 }
 
 #features-layout {
-  p {
-    .make-md-column(12);
+  p:first-child {
+    .make-md-column(6);
+    .make-md-column-offset(1);
+    color: #01455C;
+    padding: 85px 0;
+  }
+
+  p:last-child {
+    .make-md-column(4);
+    .make-md-column-offset(1);
+    padding: 65px 0;
+  }
+
+  span.illustration {
+    display: block;
+    .size(250px, 180px);
+    background: #6EB0C5;
+    border: 8px solid #01455C;
+    .border-radius(3px);
   }
 }
 
