Convert illustration to a mixin.

--- a/caliopen/static/css/features.less
+++ b/caliopen/static/css/features.less
@@ -103,11 +103,7 @@ main {
   }
 
   span.illustration {
-    display: block;
-    .size(250px, 180px);
-    background: #6EB0C5;
-    border: 8px solid #01455C;
-    .border-radius(3px);
+    .illustration(250px, 180px, #6EB0C5, #01455C);
   }
 }
 
