Start a about page.

--- a/caliopen/static/css/common.less
+++ b/caliopen/static/css/common.less
@@ -10,10 +10,17 @@ body {
   font-weight: 300;
 }
 
+h2 {
+  line-height: 1.5em;
+}
+
 h2, h3 {
   font-weight: 800;
 }
 
+/**
+ * Apply Bootstrap grid mixin on the markup
+ */
 .layout {
   .center-block();
   .container-fluid();
