--- a/caliopen/static/css/styles.less
+++ b/caliopen/static/css/styles.less
@@ -5,8 +5,8 @@
 @import "common.less";
 @import "slider.less";
 
-
 @import "home.less";
 @import "contact.less";
 @import "features.less";
 @import "tour.less";
+@import "about.less";
