--- a/caliopen/static/css/tour.less
+++ b/caliopen/static/css/tour.less
@@ -54,7 +54,7 @@ main {
     padding: 20px 40px;
 
     img {
-      margin-bottom: 30px;
+      margin: 30px auto;
     }
 
     &#centralization {
@@ -89,7 +89,7 @@ main {
       }
       li {
         padding: 0 0 0 120px;
-        margin: 20px 0;
+        margin: 60px 0;
         min-height: 110px;
         list-style: none;
         background: transparent url('/static/images/tour_picto_about.png') left top no-repeat;
