--- a/caliopen/templates/layout/features.jinja2
+++ b/caliopen/templates/layout/features.jinja2
@@ -1,18 +1,22 @@
-<html metal:use-macro="load: page.pt">
-  <script metal:fill-slot="inlinescript">
-    $(function(){
-      $("#slides").slidesjs({
-        active: false,
-        width: 1200,
-        height: 800,
-        navigation: {
-          active: true
-        }
-      });
-    });
-  </script>
+{% extends "page.jinja2" %}
 
-  <main metal:fill-slot="content" id="features-slider">
+{% block content %}
+  {% block inlinescript %}
+    <script>
+      $(function(){
+        $("#slides").slidesjs({
+          active: false,
+          width: 1200,
+          height: 800,
+          navigation: {
+            active: true
+          }
+        });
+      });
+    </script>
+  {% endblock %}
+
+  <main id="features-slider">
     <div class="layout">
       <article>
         <div class="slider">
@@ -25,8 +29,10 @@
       </article>
     </div>
   </main>
+{% endblock %}
 
-  <main metal:fill-slot="content2" id="features-icons">
+{% block content2 %}
+  <main id="features-icons">
     <div class="layout">
       <ul>
         <li id="confidentiality">
@@ -89,8 +95,10 @@
       </ul>
     </div>
   </main>
+{% endblock %}
 
-  <main metal:fill-slot="content3" id="features-layout">
+{% block content3 %}
+  <main id="features-layout">
     <div class="layout">
       <article>
         <p>Nous avons passé beaucoup de temps, avant même d'envisager les solutions techniques, à travailler sur l'ergonomie et le design d'une interface utilisateur qui puisse intégrer tous nos échanges privés. C'est, à ce jour, sur ce point que porte la majorité de nos efforts : si nous voulons intéresser le plus grand nombre à la prise en compte des problématiques de vie privée, c'est à nous de créer un outil attractif, plutôt que d'attendre un effort illusoire des utilisateurs.</p>
@@ -100,4 +108,4 @@
       </article>
     </div>
   </main>
-</html>
+{% endblock %}
