--- a/caliopen/templates/layout/html.jinja2
+++ b/caliopen/templates/layout/html.jinja2
@@ -2,17 +2,17 @@
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
 <!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
 <!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js" lang="${request.locale_name}"> <!--<![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js" lang="{{request.locale_name}}"> <!--<![endif]-->
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>${page_title}</title>
-    <meta name="description" content="${page_description}">
+    <title>{{ page_title }}</title>
+    <meta name="description" content="{{ page_description }}">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
 
-    <link rel="stylesheet/less" type="text/css" href="${request.static_url('caliopen:static/css/styles.less')}" />
+    <link rel="stylesheet/less" type="text/css" href="{{'caliopen:static/css/styles.less'|static_url}}" />
     <link href='http://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
   </head>
   <body>
@@ -20,17 +20,17 @@
         <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
 
-    <header metal:define-slot="header"></header>
-    <main metal:define-slot="content"></main>
-    <main metal:define-slot="content2"></main>
-    <main metal:define-slot="content3"></main>
-    <footer metal:define-slot="footer"></footer>
+    <header>{% block header %}{% endblock %}</header>
+    {% block content %}{% endblock %}
+    {% block content2 %}{% endblock %}
+    {% block content3 %}{% endblock %}
+    <footer>{% block footer %}{% endblock %}</footer>
 
-    <script src="${request.static_url('caliopen:static/js/jquery-1.11.1.min.js')}" type="text/javascript"></script>
-    <script src="${request.static_url('caliopen:static/js/jquery.slides.min.js')}" type="text/javascript"></script>
-    <script src="${request.static_url('caliopen:static/js/less-1.7.0.min.js')}" type="text/javascript"></script>
+    <script src="{{'caliopen:static/js/jquery-1.11.1.min.js'|static_url}}" type="text/javascript"></script>
+    <script src="{{'caliopen:static/js/jquery.slides.min.js'|static_url}}" type="text/javascript"></script>
+    <script src="{{'caliopen:static/js/less-1.7.0.min.js'|static_url}}" type="text/javascript"></script>
 
-    <script type="text/javascript" metal:define-slot="inlinescript"></script>
+    {% block inlinescript %}{% endblock %}
 
     <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
     <script>
