Update urls to use "route_url" of jinja2.

--- a/caliopen/templates/layout/contact.jinja2
+++ b/caliopen/templates/layout/contact.jinja2
@@ -19,17 +19,17 @@
       <div class="big-icons">
         <article id="github">
           <h3>Fork us on GitHub</h3>
-          <a href="/" class="logo">camera</a>
+          <a href="https://github.com/CaliOpen/CaliOpen" class="logo">octopus Github</a>
         </article>
 
         <article id="email">
           <h3>Send an email</h3>
-          <a href="/" class="logo">octopus Github</a>
+          <a href="/" class="logo">enveloppe</a>
         </article>
 
         <article id="blog">
           <h3>Visit our blog</h3>
-          <a href="/" class="logo">features</a>
+          <a href="/" class="logo">bubble</a>
         </article>
       </div>
     </div>
