--- a/caliopen/templates/layout/tour.jinja2
+++ b/caliopen/templates/layout/tour.jinja2
@@ -50,15 +50,15 @@
         <ul>
           <li id="about">
             <h3>About</h3>
-            <p>Comment ce projet est-il né ? Quels en sont les fondements ? En quoi est-ce différent de tout ce que vous utilisez actuellement pour dialoguer avec vos amis ou votre famille. Découvrez la notion de réseau social privé qui change tout, à commencer par le respect de votre vie privée.<a href="/">Read more</a></p>
+            <p>Comment ce projet est-il né ? Quels en sont les fondements ? En quoi est-ce différent de tout ce que vous utilisez actuellement pour dialoguer avec vos amis ou votre famille. Découvrez la notion de réseau social privé qui change tout, à commencer par le respect de votre vie privée.<a href="{{'about'|route_url}}">Read more</a></p>
           </li>
           <li id="features">
             <h3>Features</h3>
-            <p>De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution. Échangez simplement et sereinement avec votre entourage, et découvrez des possibilités multiples qui sont le fruit d'une longue réflexion et qui désormais vous faciliterons la vie.<a href="/">Read more</a></p>
+            <p>De nombreuses fonctionnalités avancées sont mises à votre disposition au sein de notre solution. Échangez simplement et sereinement avec votre entourage, et découvrez des possibilités multiples qui sont le fruit d'une longue réflexion et qui désormais vous faciliterons la vie.<a href="{{'features'|route_url}}">Read more</a></p>
           </li>
           <li id="contact">
             <h3>Contact</h3>
-            <p>Vous voulez nous communiquer votre avis ? Envie de prendre part à l'aventure ? Vous voulez participer à la création d'un nouvel outil, qui vise à changer radicalement la manière d'échanger avec ses proches ? Aidez-nous, rejoignez-nous.<a href="/">Read more</a></p>
+            <p>Vous voulez nous communiquer votre avis ? Envie de prendre part à l'aventure ? Vous voulez participer à la création d'un nouvel outil, qui vise à changer radicalement la manière d'échanger avec ses proches ? Aidez-nous, rejoignez-nous.<a href="{{'contact'|route_url}}">Read more</a></p>
           </li>
         </ul>
       </article>
