--- a/caliopen/templates/layout/page.jinja2
+++ b/caliopen/templates/layout/page.jinja2
@@ -9,16 +9,16 @@
   <div class="layout">
     <div>
       <div class="title">
-        <h1><a href="/" title="Caliopen">Caliopen</a></h1>
+        <h1><a href="{{'home'|route_url}}" title="Caliopen">Caliopen</a></h1>
       </div>
 
       <div class="nav">
         <nav role="navigation">
           <ul>
-            <li id="navigation-main-take-a-tour"><a href="/tour" class="button">Take a tour</a></li>
-            <li id="navigation-main-about"><a href="/about" class="button">About</a></li>
-            <li id="navigation-main-features"><a href="/features" class="button">Features</a></li>
-            <li id="navigation-main-contact-us"><a href="/contact" class="button">Contact us</a></li>
+            <li id="navigation-main-take-a-tour"><a href="{{'tour'|route_url}}" class="button">Take a tour</a></li>
+            <li id="navigation-main-about"><a href="{{'about'|route_url}}" class="button">About</a></li>
+            <li id="navigation-main-features"><a href="{{'features'|route_url}}" class="button">Features</a></li>
+            <li id="navigation-main-contact-us"><a href="{{'contact'|route_url}}" class="button">Contact us</a></li>
           </ul>
         </nav>
       </div>
@@ -39,15 +39,15 @@
         <div>
           <ul class="footer-links column">
             <li id="footer-link-product" class="list-title">Product</li>
-            <li id="footer-link-origins"><a href="/">The origins</a></li>
-            <li id="footer-link-download"><a href="/">Download</a></li>
+            <li id="footer-link-origins"><a href="{{'about'|route_url}}">The origins</a></li>
+            <li id="footer-link-download"><a href="https://github.com/CaliOpen/CaliOpen/archive/master.zip">Download</a></li>
           </ul>
         </div>
 
         <div>
           <ul class="footer-links column">
             <li id="footer-link-community" class="list-title">Community</li>
-            <li id="footer-link-fork-us"><a href="/">Fork us on GitHub</a></li>
+            <li id="footer-link-fork-us"><a href="https://github.com/CaliOpen/CaliOpen">Fork us on GitHub</a></li>
             <li id="footer-link-blog"><a href="/">Visit our blog</a></li>
           </ul>
         </div>
